<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#DC7A7A">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:src="@drawable/arel"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="30dp"
            app:civ_border_color="@color/borderColor"
            app:civ_border_width="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/ac_login_edt_email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/ac_login_edt_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:paddingLeft="2dp"
            android:inputType="textPassword"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:layout_marginTop="10dp"
            android:hint="@string/password"/>

    </LinearLayout>

    <Button
        android:id="@+id/ac_login_btn_giris"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="5dp"
        android:background="#573737"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/girisYapIntentText"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="@color/white"
            android:text="@string/kayitliDegil"/>

        <TextView
            android:id="@+id/ac_login_txt_register"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="2dp"
            android:textStyle="bold"
            android:textColor="#350E0E"
            android:text="@string/kayitOl"
            android:onClick="kayitOl" />
    </LinearLayout>

</LinearLayout>