<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#DC7A7A"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="wrap_content"
            android:layout_height="110dp"
            android:src="@drawable/arel"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:civ_border_color="@color/borderColor"
            app:civ_border_width="2dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="40dp">

        <EditText
            android:id="@+id/ac_register_ed_email"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_person_black_24dp"
            android:hint="@string/email"/>

        <EditText
            android:id="@+id/ac_register_ed_password"
            android:layout_width="250dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:paddingLeft="2dp"
            android:background="@color/white"
            android:drawableLeft="@drawable/ic_lock_black_24dp"
            android:inputType="textPassword"
            android:hint="@string/password"/>


    </LinearLayout>

    <Button
        android:id="@+id/ac_register_btn_kayit"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#573737"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:text="@string/kayitOl"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/kayitli"/>

        <TextView
            android:id="@+id/ac_register_txt_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:textStyle="bold"
            android:textColor="#350E0E"
            android:text="@string/girisYapIntentText"
            android:onClick="girisYap" />
    </LinearLayout>

</LinearLayout>