<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SplashActivity"
    android:orientation="vertical"
    android:background="#A2DDC2">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true">

        <TextView
            android:id="@+id/ac_splash_aciklama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/aciklama"
            android:layout_centerVertical="true"
            android:textSize="25sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ac_splash_isim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/isim"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_below="@id/ac_splash_aciklama"
            android:textSize="24sp"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/ac_splash_ogrenciNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ogrenciNo"
            android:textSize="24sp"
            android:layout_below="@+id/ac_splash_isim"
            android:layout_centerHorizontal="true"
            android:textColor="@color/black" />


    </RelativeLayout>

</RelativeLayout>